--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,111 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap");
+
+:root {
+  --background-color: #282c34;
+  --accent-color: #61dafb;
+  --font-color: #fff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* base styles & title */
+
+body {
+  background-color: var(--background-color);
+  color: var(--font-color);
+  text-align: center;
+  margin: 0;
+  font-family: "Noto Serif";
+}
+
+.App {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.heading-1 {
+  text-align: left;
+  font-size: 1.2rem;
+  letter-spacing: 2px;
+  font-weight: normal;
+}
+
+.heading-2 {
+  margin-top: 60px;
+  font-size: 2.6rem;
+}
+
+/* make the input invisible */
+label input {
+  height: 0;
+  width: 0;
+  opacity: 0;
+}
+
+label {
+  display: block;
+  width: 30px;
+  height: 30px;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  margin: 10px auto;
+  line-height: 30px;
+  font-weight: bold;
+  font-size: 1.5rem;
+  transition: background 0.1s, color 0.1s;
+}
+
+label:hover {
+  background: var(--font-color);
+  color: var(--background-color);
+}
+
+/* progress bar */
+.progress-bar {
+  height: 5px;
+  background: var(--accent-color);
+  margin-top: 20px;
+}
+
+/* image grid */
+.img-grid {
+  margin: 40px auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 40px;
+}
+
+.img-wrap {
+  overflow: hidden;
+  height: 0;
+  padding: 50% 0;
+  position: relative;
+  opacity: 0.8;
+}
+
+.img-wrap img {
+  cursor: pointer;
+  min-width: 100%;
+  min-height: 100%;
+  max-width: 150%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+/* modal styles */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.backdrop img {
+  display: block;
+  max-width: 60%;
+  max-height: 80%;
+  margin: 60px auto;
+  box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.5);
+  border: 3px solid white;
 }
